--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "main": "index.js",
   "author": "adam wong <adamwong246@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "tsc && node dist/server.js",
+    "watch": "tsc --watch"
+  },
   "devDependencies": {
-    "bootstrap": "^5.3.7",
-    "sass": "^1.90.0"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "sass": "^1.90.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/marked": "^6.0.0",
+    "@types/recursive-readdir": "^2.2.4",
+    "@types/ws": "^8.18.1",
+    "chokidar": "^3.6.0",
+    "express": "^4.18.2",
+    "marked": "^12.0.2",
+    "recursive-readdir": "^2.2.3",
+    "ws": "^8.18.3"
   }
 }
