--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stilo",
-  "version": "1.0.0",
+  "name": "testeranto-stilo",
+  "version": "0.0.3",
   "main": "index.js",
   "author": "adam wong <adamwong246@gmail.com>",
   "license": "MIT",
