--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testeranto-stilo",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "index.js",
   "author": "adam wong <adamwong246@gmail.com>",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "@types/marked": "^6.0.0",
     "@types/recursive-readdir": "^2.2.4",
     "@types/ws": "^8.18.1",
+    "bootstrap": "^5.3.7",
     "chokidar": "^3.6.0",
     "express": "^4.18.2",
     "marked": "^12.0.2",
